changes to get results

--- a/ipynb/mAP.ipynb
+++ b/ipynb/mAP.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\paulo\\anaconda3\\envs\\faces\\lib\\site-packages\\tqdm\\std.py:668: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
-      "  from pandas import Panel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +115,7 @@
        "1  [[(1139, 361), (1149, 361), (1160, 360), (1162...                      []  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,62 +198,70 @@
     "    avg_prec = np.mean(prec_at_rec)\n",
     "\n",
     "    print('11 point precision is ', prec_at_rec)\n",
-    "    print('mAP is ', avg_prec)\n",
+    "    print(f'mAP.{threshold*100} is ', avg_prec)\n",
     "\n",
-    "    return avg_prec, precision, recall, prec_at_rec"
+    "    return avg_prec, precision, recall, prec_at_rec, tps, fps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_images_faces = lambda d: f'Faces: {d.circular_perimeter_faces.apply(len).sum()} Images:{len(d.circular_perimeter_faces)}'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overall"
+    "# Overall"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Faces: 5171 Images:2845'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_images_faces(dataset360)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mAP.50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 point precision is  [1.0, 0.6153388822829964, 0.6153388822829964, 0.6148511990754117, 0.6148511990754117, 0.6089432255903534, 0.6089432255903534, 0.6089432255903534, 0.0, 0.0, 0.0]\n",
-      "mAP is  0.4806554399534433\n"
+      "11 point precision is  [1.0, 0.6159334126040428, 0.6159334126040428, 0.6157180005778676, 0.6157180005778676, 0.6101155585329091, 0.6101155585329091, 0.6101155585329091, 0.0, 0.0, 0.0]\n",
+      "mAP.50.0 is  0.4812408638147771\n"
      ]
     }
    ],
    "source": [
-    "avg_prec, precision, recall, prec_at_rec = compute_metrics(dataset360, 'circular_perimeter_faces', 'detections_viewport') "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Close to Poles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(318, 11)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "poles = dataset360.loc[dataset360.phi.apply(abs) >= 75]\n",
-    "poles.shape"
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(dataset360, 'circular_perimeter_faces', 'detections_viewport', threshold = 0.5) "
    ]
   },
   {
@@ -274,13 +273,190 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 point precision is  [0.4444444444444444, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "mAP is  0.0404040404040404\n"
+      "11 point precision is  [1.0, 0.8237367802585194, 0.8156493240475216, 0.8156493240475216, 0.813499804916114, 0.8133125325013001, 0.8133125325013001, 0.0, 0.0, 0.0, 0.0]\n",
+      "mAP.50.0 is  0.5359236634792979\n"
      ]
     }
    ],
    "source": [
-    "avg_prec, precision, recall, prec_at_rec = compute_metrics(poles, 'circular_perimeter_faces', 'detections_mtcnn') "
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(dataset360, 'circular_perimeter_faces', 'detections_mtcnn', threshold = 0.5) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mAP.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 point precision is  [1.0, 0.7285291214215203, 0.7217910447761194, 0.7217638691322902, 0.7217638691322902, 0.7208720514653324, 0.7208720514653324, 0.7208720514653324, 0.7206498074024451, 0.0, 0.0]\n",
+      "mAP.25.0 is  0.6161012605691512\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(dataset360, 'circular_perimeter_faces', 'detections_viewport', threshold = 0.25) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 point precision is  [1.0, 0.8985959438377535, 0.8852596314907872, 0.8852596314907872, 0.8852596314907872, 0.883902948082442, 0.883902948082442, 0.0, 0.0, 0.0, 0.0]\n",
+      "mAP.25.0 is  0.5747437031340908\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(dataset360, 'circular_perimeter_faces', 'detections_mtcnn', threshold = 0.25) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Close to Poles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(318, 11)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poles = dataset360.loc[dataset360.phi.apply(abs) >= 75]\n",
+    "poles.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Faces: 642 Images:318'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_images_faces(poles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mAP.50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 point precision is  [1.0, 0.48872180451127817, 0.48872180451127817, 0.48872180451127817, 0.48872180451127817, 0.48203221809169766, 0.48203221809169766, 0.47794871794871796, 0.0, 0.0, 0.0]\n",
+      "mAP.50.0 is  0.3997182156524751\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(poles, 'circular_perimeter_faces', 'detections_viewport', threshold = 0.50) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 point precision is  [0.4444444444444444, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "mAP.50.0 is  0.0404040404040404\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(poles, 'circular_perimeter_faces', 'detections_mtcnn', threshold = 0.50) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mAP.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 point precision is  [1.0, 0.5576208178438662, 0.5576208178438662, 0.5576208178438662, 0.5576208178438662, 0.5576208178438662, 0.5576208178438662, 0.5576208178438662, 0.550321199143469, 0.0, 0.0]\n",
+      "mAP.25.0 is  0.495787902186412\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(poles, 'circular_perimeter_faces', 'detections_viewport', threshold = 0.25) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 point precision is  [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "mAP.25.0 is  0.09090909090909091\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(poles, 'circular_perimeter_faces', 'detections_mtcnn', threshold = 0.25) "
    ]
   },
   {
@@ -298,7 +474,7 @@
     {
      "data": {
       "text/plain": [
-       "(317, 11)"
+       "(224, 11)"
       ]
      },
      "execution_count": 20,
@@ -307,8 +483,53 @@
     }
    ],
    "source": [
-    "borders = dataset360.loc[dataset360.theta.apply(abs) >= 160]\n",
+    "borders = dataset360.loc[dataset360.theta.apply(abs) >= 165]\n",
     "borders.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Faces: 424 Images:224'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_images_faces(borders)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mAP.50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 point precision is  [1.0, 0.6820512820512821, 0.6820512820512821, 0.6820512820512821, 0.6744186046511628, 0.6608478802992519, 0.6608478802992519, 0.649890590809628, 0.0, 0.0, 0.0]\n",
+      "mAP.50.0 is  0.5174689820193764\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(borders, 'circular_perimeter_faces', 'detections_viewport', threshold = 0.5) "
    ]
   },
   {
@@ -320,13 +541,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 point precision is  [1.0, 0.7010869565217391, 0.7010869565217391, 0.688212927756654, 0.6732394366197183, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "mAP is  0.3421478434018046\n"
+      "11 point precision is  [1.0, 0.668918918918919, 0.668918918918919, 0.6377952755905512, 0.6319702602230484, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "mAP.50.0 is  0.3279639430592216\n"
      ]
     }
    ],
    "source": [
-    "avg_prec, precision, recall, prec_at_rec = compute_metrics(borders, 'circular_perimeter_faces', 'detections_mtcnn') "
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(borders, 'circular_perimeter_faces', 'detections_mtcnn', threshold = 0.5) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mAP.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 point precision is  [1.0, 0.7483870967741936, 0.7483870967741936, 0.7483870967741936, 0.7483870967741936, 0.7483870967741936, 0.7483870967741936, 0.7483870967741936, 0.7483870967741936, 0.0, 0.0]\n",
+      "mAP.25.0 is  0.6351906158357771\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(borders, 'circular_perimeter_faces', 'detections_viewport', threshold = 0.25) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 point precision is  [1.0, 0.7875, 0.78125, 0.7757575757575758, 0.7652733118971061, 0.7652733118971061, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "mAP.25.0 is  0.44318674541379893\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_prec, precision, recall, prec_at_rec, tps, fps = compute_metrics(borders, 'circular_perimeter_faces', 'detections_mtcnn', threshold = 0.25) "
    ]
   },
   {
