rerun dataset generation after change in r_h

--- a/ipynb/FDDB360_generator.ipynb
+++ b/ipynb/FDDB360_generator.ipynb
@@ -9,6 +9,7 @@
     "import sys, cv2, os, re, random\n",
     "sys.path.append('../')\n",
     "\n",
+    "import pandas as pd\n",
     "from IPython.core.pylabtools import figsize\n",
     "from matplotlib import pyplot as plt\n",
     "from tqdm.notebook import tqdm\n",
@@ -32,7 +33,7 @@
     "    \n",
     "    #print(image_data)\n",
     "    \n",
-    "    projected, _, projector = image_projection_to_equi(back, image, phi, theta, r_h = r_h)\n",
+    "    projected, _, projector, r_h = image_projection_to_equi(back, image, phi, theta, r_h = r_h)\n",
     "    proj_path = image_data['path'].replace('/', '_')+'.jpg'\n",
     "    \n",
     "    projected_faces = projected.copy()\n",
@@ -52,7 +53,7 @@
     "        plt.imshow(cv2.cvtColor(projected_faces, cv2.COLOR_BGR2RGB))\n",
     "        plt.show()\n",
     "        \n",
-    "    return projected, faces_points"
+    "    return projected, faces_points, r_h"
    ]
   },
   {
@@ -76,30 +77,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2845"
+       "\"\\nall_im = []\\nfor l in images:\\n    for im in l:\\n        image = cv2.imread('../data/originalPics/'+im['path']+'.jpg', cv2.IMREAD_COLOR)\\n        all_im.append(image.shape[0])\\nmax(all_im)\\n\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "images = [read_fold(fold) for fold in folds]\n",
-    "\n",
+    "'''\n",
     "all_im = []\n",
     "for l in images:\n",
     "    for im in l:\n",
     "        image = cv2.imread('../data/originalPics/'+im['path']+'.jpg', cv2.IMREAD_COLOR)\n",
     "        all_im.append(image.shape[0])\n",
     "max(all_im)\n",
-    "\n",
+    "'''\n",
     "##max height in FDDB is 450"
    ]
   },
@@ -111,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81df4e20baf84a7d8f6d95b0624c7141",
+       "model_id": "79a1187f52d74267a100c7067a1b3823",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d98c2c3fc4a42dab63843ff800d3328",
+       "model_id": "da8364c73f64407caa3753eb69c2a199",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,14 +148,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "exists\n"
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b00cf290ba24c11a26ef24da6f2fed2",
+       "model_id": "38f2dc1736f54615b5d20dc7a4ffa7ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02226db521904917b249067e0a1be536",
+       "model_id": "216fed37dcab46a29257b6d867088c36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,7 +196,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2828372845c463c941a81c154e5c76d",
+       "model_id": "833c8f61d63a40949c7f29eb4eb0b561",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +217,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e37abf717ae04e6ebc6435d08bf65faa",
+       "model_id": "abf948795e694fb581a8120864aa051e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -238,7 +238,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d82527bd76004aba94f866efb7462920",
+       "model_id": "bfe34de75f2c419bbe263fbbb560a4ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +259,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67ce2b5b1b364dd78d29488d03ad6d84",
+       "model_id": "5eacca11cd364b39816bf0e4c57bdb4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ff41468f03c4b5c9caab56ead94f86e",
+       "model_id": "27f82e5419244530999d7c807f4dd6f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,7 +301,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7732c596b06e4a01898d441da8724caf",
+       "model_id": "1356fc8adb224d2386b995960ec6400a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,7 +369,7 @@
     "        theta = np.random.randint(-180, 180)\n",
     "        #r_h=random.uniform(0.5, 1)\n",
     "        r_h = -1 #default height\n",
-    "        proj, faces_points = project_fddb_to_equi(image, backs[back_i].copy(), np.radians(phi), np.radians(theta), r_h)\n",
+    "        proj, faces_points, r_h = project_fddb_to_equi(image, backs[back_i].copy(), np.radians(phi), np.radians(theta), r_h)\n",
     "        \n",
     "        lines = []        \n",
     "        lines.append(im_path+'\\n')\n",
