test with 25 as threshold for NMS

--- a/ipynb/dataset_detection_results.ipynb
+++ b/ipynb/dataset_detection_results.ipynb
@@ -30,7 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe_name = '../dataframes/dataset360nms25_detections.pkl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +163,14 @@
        "4  [[(40, 38), (137, 33), (236, 37), (199, 61), (...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset360 = pd.read_pickle('../dataframes/dataset360_detections.pkl')\n",
-    "dataset360.head()"
+    "dataset360 = pd.read_pickle()\n",
+    "dataset360.head(dataframe_name)"
    ]
   },
   {
@@ -173,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,13 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3f1724d525a448bb1b7ccfe98ebe973",
+       "model_id": "8d53c1426a5241b2b161914aa94c307f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -223,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +369,7 @@
        "4                                                 []  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,11 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset360.to_pickle('../dataframes/dataset360_detections.pkl')"
+    "dataset360.to_pickle(dataframe_name)"
    ]
   },
   {
@@ -387,22 +396,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset360 = pd.read_pickle('../dataframes/dataset360_detections.pkl')"
+    "dataset360 = pd.read_pickle(dataframe_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e4c007b4616424daf96c23190b1ad5a",
+       "model_id": "1a891ae4f9754459b9b54d0dd39c2f06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,7 +432,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fff132ee2d146c2b4e36f99ed3cf289",
+       "model_id": "d6c74d176b6a4d12a334b2e08c401ef4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,7 +453,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ac44f37e2b74bafaa9e1b5f9c46edff",
+       "model_id": "b00dba06b1034da882b7740cf2ce2b97",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,7 +474,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12c1a065c01c4f0aae009566184ed411",
+       "model_id": "ff0956bf726345f3b119a292f1b275b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +495,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d4612199d274ddd910a5bf51e4a73ae",
+       "model_id": "67335d314c544d4f8ccdf9cbd43a6f81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,7 +516,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cab481624464428af6255d429fd7bcc",
+       "model_id": "5ce9a7182b524d19ab3175cc476d1d16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -528,7 +537,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c246ea1d54a045c5bcd282eea7d3f80e",
+       "model_id": "290220b416fc48cc9920461ab20d79ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -549,7 +558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef63c6ba94ba407799731ed8ae414231",
+       "model_id": "548f6581440a4d4abab64d61348c21d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -571,22 +580,22 @@
    "source": [
     "#viewports_detector_tf = ViewportsFaceDetector(width = 200)\n",
     "\n",
-    "for density in range(3, 6):\n",
+    "for density in range(3, 11):\n",
     "    col_name = f'detectionsViewD_{density}'\n",
     "    \n",
     "    if col_name in dataset360.columns:\n",
     "        print('density already computed')\n",
     "        continue\n",
     "    \n",
-    "    viewports_detector_torch = ViewportsFaceDetector(torch = True, width = 200, rows = density, cols = density*2)\n",
+    "    viewports_detector_torch = ViewportsFaceDetector(torch = True, width = 200, rows = density, cols = density*2, nms_th=0.25)\n",
     "    detections_viewport = dataset360.image_path.progress_apply(lambda x: viewports_detector_torch.detect_faces_polys(x)[0])\n",
     "    dataset360[col_name] = detections_viewport\n",
-    "    dataset360.to_pickle('../dataframes/dataset360_detections.pkl')"
+    "    dataset360.to_pickle(dataframe_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +836,7 @@
        "4  [[(47, 57), (86, 45), (151, 34), (187, 53), (2...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,13 +881,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba58310f2d5b425f8f9b5340e2f90353",
+       "model_id": "d789b6f4a33e466190f23592305ca62a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -903,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,11 +921,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset360.to_pickle('../dataframes/dataset360_detections.pkl')"
+    "dataset360.to_pickle(dataframe_name)"
    ]
   },
   {
