corrected error when reading dataset

--- a/ipynb/dataset_detection_results.ipynb
+++ b/ipynb/dataset_detection_results.ipynb
@@ -169,8 +169,8 @@
     }
    ],
    "source": [
-    "dataset360 = pd.read_pickle()\n",
-    "dataset360.head(dataframe_name)"
+    "dataset360 = pd.read_pickle(dataframe_name)\n",
+    "dataset360.head()"
    ]
   },
   {
