converting xy to lat long positions

--- a/ipynb/video360_face_clustering.ipynb
+++ b/ipynb/video360_face_clustering.ipynb
@@ -20,6 +20,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import cv2\n",
     "from faces_clustering import VideoClustering\n",
     "\n",
     "from mtcnn_torch import MTCNN_Torch\n",
@@ -251,6 +252,165 @@
     "#obtaining the center position of the bounding boxes\n",
     "\n",
     "actors_pos['center_face_pos'] = actors_pos.bounds.apply(lambda x: np.array(x).mean(axis = 0))\n",
+    "actors_pos.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting Coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_y, max_x, _  = cv2.imread(actors_pos.urls[0]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lat_long_from_xy(pos_xy, max_x = max_x, max_y = max_y):\n",
+    "    x,y = pos_xy\n",
+    "\n",
+    "    d_y = (y/max_y)*180\n",
+    "    d_x = (x/max_x)*360\n",
+    "\n",
+    "    lat = 90 - d_y    #where 90 is the top and -90 is the bottom\n",
+    "    long = d_x - 180  #where 180 is the right and -180 is the left\n",
+    "\n",
+    "    return {'lat': lat, 'long': long}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actors_pos['lat_long'] = actors_pos.center_face_pos.apply(lat_long_from_xy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>frames</th>\n",
+       "      <th>urls</th>\n",
+       "      <th>bounds</th>\n",
+       "      <th>actors_id</th>\n",
+       "      <th>center_face_pos</th>\n",
+       "      <th>lat_long</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30</td>\n",
+       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
+       "      <td>[(96, 393), (123, 396), (149, 399), (149, 430)...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[122.625, 429.5]</td>\n",
+       "      <td>{'lat': 9.46875, 'long': -157.0078125}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30</td>\n",
+       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
+       "      <td>[(1535, 397), (1561, 396), (1589, 395), (1589,...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[1561.75, 429.875]</td>\n",
+       "      <td>{'lat': 9.3984375, 'long': 112.828125}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30</td>\n",
+       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
+       "      <td>[(542, 417), (569, 415), (596, 414), (596, 450...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[569.0, 451.0]</td>\n",
+       "      <td>{'lat': 5.4375, 'long': -73.31250000000001}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30</td>\n",
+       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
+       "      <td>[(1043, 411), (1071, 413), (1100, 416), (1100,...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>[1071.375, 447.875]</td>\n",
+       "      <td>{'lat': 6.0234375, 'long': 20.8828125}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30</td>\n",
+       "      <td>D:/Movies/360Video/omelete\\frame_30.jpg</td>\n",
+       "      <td>[(1820, 385), (1836, 384), (1855, 383), (1855,...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[1837.125, 406.375]</td>\n",
+       "      <td>{'lat': 13.8046875, 'long': 164.4609375}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   frames                                     urls  \\\n",
+       "0      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
+       "1      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
+       "2      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
+       "3      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
+       "4      30  D:/Movies/360Video/omelete\\frame_30.jpg   \n",
+       "\n",
+       "                                              bounds  actors_id  \\\n",
+       "0  [(96, 393), (123, 396), (149, 399), (149, 430)...          1   \n",
+       "1  [(1535, 397), (1561, 396), (1589, 395), (1589,...          2   \n",
+       "2  [(542, 417), (569, 415), (596, 414), (596, 450...          0   \n",
+       "3  [(1043, 411), (1071, 413), (1100, 416), (1100,...          5   \n",
+       "4  [(1820, 385), (1836, 384), (1855, 383), (1855,...          3   \n",
+       "\n",
+       "       center_face_pos                                     lat_long  \n",
+       "0     [122.625, 429.5]       {'lat': 9.46875, 'long': -157.0078125}  \n",
+       "1   [1561.75, 429.875]       {'lat': 9.3984375, 'long': 112.828125}  \n",
+       "2       [569.0, 451.0]  {'lat': 5.4375, 'long': -73.31250000000001}  \n",
+       "3  [1071.375, 447.875]       {'lat': 6.0234375, 'long': 20.8828125}  \n",
+       "4  [1837.125, 406.375]     {'lat': 13.8046875, 'long': 164.4609375}  "
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "actors_pos.head()"
    ]
   },
